--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,7 +3,7 @@
 
 @import "global/global";
 // @import "global/reset";
-// @import "global/fonts";
+@import "global/fonts";
 // @import "global/footer";
 
 
