--- a/src/scss/grid/_posts.scss
+++ b/src/scss/grid/_posts.scss
@@ -1,7 +1,13 @@
 .posts {
     &__grid {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: 1fr;
         grid-gap: 2.4vw;
+        @media (min-width: 576px) { 
+            grid-template-columns: repeat(2, 1fr);
+        }
+        @media (min-width: 992px) { 
+            grid-template-columns: repeat(3, 1fr); 
+        }
     }
 }
