--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -3,6 +3,8 @@ nav {
     grid-template-columns: 30% 50% 20%;
     height: 10vh;
     box-shadow: $boxShadow;
+    background: black;
+    position: relative;
     ul.nav-items {
         grid-column: 2;
         display: flex;
@@ -11,6 +13,11 @@ nav {
         align-items: center;
         li {
             cursor: pointer;
+            a {
+                color: white;
+                text-transform: uppercase;
+                font-weight: 700;
+            }
         }
         .has-submenu {
             position: relative;
@@ -23,14 +30,14 @@ nav {
                 content: '';
                 height: 100%;
                 width: 50%;
-                left: -50%;
+                left: -10%;
             }
             &::after {
                 position: absolute;
                 content: '';
                 height: 100%;
                 width: 50%;
-                right: -50%;
+                right: -10%;
                 z-index: 20;
             }
             &:hover {
@@ -48,8 +55,11 @@ nav {
                 left: 0;
                 width: max-content;
                 box-shadow: $boxShadow;
-                padding: 30px 10px;
-                background: #fff;
+                padding: 10px 20px;
+                background: black;
+                li {
+                    line-height: 2.2em;
+                }
             }
         }
     }
@@ -64,5 +74,37 @@ nav {
         flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
+    }
+
+    .icons {
+        padding: 1em 1em 1em 4em;
+        grid-column: 3;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+        svg {
+            color: white;
+            height: 20px;
+            width: 20px;
+        }
+    }
+
+    .search-container {
+        display: none;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        padding: 1em;
+        justify-content: center;
+        align-items: center;
+        transition: opacity 0.6s ease;
+        form.search-form {
+            position: absolute;
+            width: 100%;
+            padding: 1em;
+            background: rgba(0, 0, 0, 0.7);
+            transition: opacity 0.6s ease;
+        }
     }
 }
