--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -81,12 +81,15 @@ nav {
         grid-column: 3;
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: flex-end;
         align-items: center;
-        svg {
-            color: white;
-            height: 20px;
-            width: 20px;
+        .icon-container {
+            margin: 0 10px;
+            svg {
+                color: white;
+                height: 20px;
+                width: 20px;
+            }
         }
     }
 
@@ -99,12 +102,49 @@ nav {
         justify-content: center;
         align-items: center;
         transition: opacity 0.6s ease;
+        opacity: 1;
         form.search-form {
             position: absolute;
             width: 100%;
             padding: 1em;
-            background: rgba(0, 0, 0, 0.7);
-            transition: opacity 0.6s ease;
+            background: rgba(0, 0, 0, 0.9);
+            input {
+                width: 0%;
+                height: 35px;
+                border-radius: 20px;
+                padding: 0 10px;
+                transition: width 0.6s ease;
+            }
+            button.search-submit {
+                background: transparent;
+                border: none;
+                outline: none;
+                position: absolute;
+                top: 25px;
+                cursor: pointer;
+            }
+            .expanded {
+                width: 4%;
+                transition: width 0.6s ease;
+            }
+            .expanded2x {
+                width: 60%;
+            }
+        }
+        .close-search {
+            position: absolute;
+            right: 16px;
+            font-weight: 700;
+            cursor: pointer;
+        }
+        svg {
+            color: white;
+            height: 20px;
+            width: 20px;
         }
     }
+}
+
+.fade-out {
+    opacity: 0 !important;
 }
